<resources>
    <string name="app_name">ButterflyDetector</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Buttershy</string>
    <string name="nav_header_subtitle">buttershy@theshyguy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_photoselection">Photoselection</string>
    <string name="menu_speciescatalog">Speciescatalog</string>
    <string name="menu_transects">Transects</string>
    <string name="menu_transectwalks">Transectwalks</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_tutorial">Tutorial</string>

    <!-- Colorblind mode strings -->
    <string name="colorblind_mode_enabled">Colorblind mode enabled</string>
    <string name="colorblind_mode_disabled">Colorblind mode disabled</string>
    <string name="settings_colorblind_on">Settings (Colorblind Mode: ON)</string>
    <string name="settings_colorblind_off">Settings (Colorblind Mode: OFF)</string>
</resources>