<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_photoselection"
            android:icon="@drawable/ic_menu_photoselection"
            android:title="@string/menu_photoselection" />
        <item
            android:id="@+id/nav_speciescatalog"
            android:icon="@drawable/ic_menu_speciescatalog"
            android:title="@string/menu_speciescatalog" />
        <item
            android:id="@+id/nav_transects"
            android:icon="@drawable/ic_menu_transects"
            android:title="@string/menu_transects" />
        <item
            android:id="@+id/nav_transectwalks"
            android:icon="@drawable/ic_menu_transectwalks"
            android:title="@string/menu_transectwalks" />
        <item
            android:id="@+id/nav_tutorial"
            android:title="Tutorial"
            android:icon="@drawable/ic_help" />

    </group>


</menu>
